<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search" android:icon="@drawable/ic_search" android:title="@string/search" app:showAsAction="always" />
    <item android:id="@+id/action_save" android:icon="@drawable/ic_save" android:title="@string/save" app:showAsAction="always" />
    <item android:id="@+id/action_pdf" android:icon="@drawable/ic_doc" android:title="@string/print" app:showAsAction="always" />
    <item android:id="@+id/action_print" android:icon="@drawable/ic_print" android:title="@string/print" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_new" android:title="@string/new_doc" app:showAsAction="never" />
    <item android:id="@+id/action_delete" android:title="@string/delete" app:showAsAction="never" />
    <item android:id="@+id/action_share" android:title="@string/share" app:showAsAction="never" />
    <item android:id="@+id/action_message" android:title="@string/issue_message" app:showAsAction="never" />
    <item android:id="@+id/action_whatsapp" android:title="@string/whatsapp_notify" app:showAsAction="never" />
    <item android:id="@+id/action_print_invoices" android:title="@string/print_invoices" app:showAsAction="never" />
</menu>
